--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.slider-frame{
+  position: absolute;
+  top: 10px;
+  left: 0;
+  border-radius: 5px!important
+}
